2004-02-02  Scott Dattalo  <scott@dattalo.com>
	* src/intcon.*, src/processor.*, src/16bit-processor.*
	Fixed the weird bug that was discussed in the 2004-01-30 entry. The
	problem was basically invalid type casting. In the processor class
	heirarchy, there are about 5 or 6 levels of inheritance. Most of
	the time gpsim accesses a processor's details through one of the
	base classes. Sometimes though, an object needs access to somthing
	specific to a processor. In these cases, gpsim would type cast
	a pointer to the specific processor. The bug is that you can't
	safely type cast a base class object into a derived class object
	in C++.

2004-01-30  Scott Dattalo  <scott@dattalo.com>
	* almost all source files - still trying to sort out include 
	dependencies. There's a weird bug where gcc is adding an extra
	4-byte offset to pointers in some instances. I have no clue why...
	
2004-01-29  Scott Dattalo  <scott@dattalo.com>
	* almost all source files - trying to sort out include dependencies
	
2004-01-28  Scott Dattalo  <scott@dattalo.com>
	* src/pir.h moved all of the PIR*::put()'s to the PIR base class
	* src/intcon.h, src/intcon.cc moved inline functions that called
	bp and trace objects from the header file to the .cc file.
	* src/pir.cc new file - added so that inline functions that called
	bp and trace objects could be removed from the header file.
	* src/Makefile.am added pir.cc to the list of src files.
	
2004-01-26  Scott Dattalo  <scott@dattalo.com>
	* src/* gui/*
	  Replaced references to 'file_register' with 'Register'.
	  Removed many gpsim_*() calls. 
	  Renamed the program_memory_access class to ProgramMemoryAccess.
	  Moved processor member functions associated with code breakpoints
	  into the ProgramMemoryAccess class.
	
2004-01-26  Scott Dattalo  <scott@dattalo.com>
	* src/register.h, src/register.cc, src/pic-register.h, src/pic-processor.h,
	  src/14bit-registers.cc
	cleaned up some include file dependencies.
	moved the program counter class.
	