@@ -1,3 +1,7 @@
+2004-02-04  Scott Dattalo  <scott@dattalo.com>
+	* src/processor.cc
+	Experimenting with operator [] for the ProgramMemoryAccess class.
+
 2004-02-02  Scott Dattalo  <scott@dattalo.com>
 	* src/intcon.*, src/processor.*, src/16bit-processor.*
 	Fixed the weird bug that was discussed in the 2004-01-30 entry. The
